--- a/client/main.css
+++ b/client/main.css
@@ -37,14 +37,26 @@ header > h2 {
   text-align: center;
 }
 
+h1 {
+  font-size: 48px;
+
+  padding: 0px;
+  margin-top: 10px;
+}
+
+#homeTimer > p:nth-of-type(1) {
+  margin: 50px 0px 0px;
+  padding: 0px;
+  line-height: 0px;
+}
+
 #homeTimer > h2:nth-of-type(1) {
   font-size: 25px;
-  font-weight: 400;
+  font-weight: 500;
 }
 
 #homeTimer > h2:nth-of-type(1) > span {
   font-size: 36px;
-  font-weight: 500;
 }
 
 button {
