--- a/imports/client/styles/_main.scss
+++ b/imports/client/styles/_main.scss
@@ -1,9 +1,10 @@
 @import 'components/classes';
+@import 'components/variables';
 
 body {
   font-family: sans-serif;
 
-  height: 100vh;
+  min-height: 100vh;
 
   background: linear-gradient(#FFFFFF, #E1E1E1)
 }
@@ -19,17 +20,16 @@ header, footer { /* Sets header and footer to be 50px tall locked at top and bot
   width: 100%;
   height: 50px;
 
-  background-color: #660000;
+  background-color: $red;
 }
 
 header {
   top: 0;
-  color: white;
-}
-
-header > h2 {
-  font-size: 25px;
-  font-weight: 400;
+  color: $white;
+  h2 {
+    font-size: 25px;
+    font-weight: 400;
+  }
 }
 
 #react-target {
@@ -44,19 +44,19 @@ h1 {
   margin-top: 10px;
 }
 
-#homeTimer > p:nth-of-type(1) {
-  margin: 50px 0px 0px;
-  padding: 0px;
-  line-height: 0px;
-}
-
-#homeTimer > h2:nth-of-type(1) {
-  font-size: 25px;
-  font-weight: 500;
-}
-
-#homeTimer > h2:nth-of-type(1) > span {
-  font-size: 36px;
+#homeTimer {
+    p:nth-of-type(1) {
+        margin: 50px 0px 0px;
+        padding: 0px;
+        line-height: 0px;
+    }
+    h2:nth-of-type(1) {
+        font-size: 25px;
+        font-weight: 500;
+        span {
+            font-size: 36px;
+          }
+    }
 }
 
 button {
@@ -67,13 +67,13 @@ button {
   border: none;
   border-radius: 10px;
 
-  color: white;
+  color: $white;
   
   width: 210px;
 }
 
 #startStopBtn {
-  background-color: #007680;
+  background-color: $green;;
 
   font-size: 36px;
 }
@@ -82,43 +82,39 @@ button {
   font-size: 20px;
   padding: 10px 0px;
 
-  background-color: #8B7E7A;
+  background-color: $tan;
 }
 
 footer {
   bottom: 0;
-}
-
-footer > ul {
-  list-style: none;
-  padding-left: 0px;
-  
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-footer > ul > li {
-  display: inline-block;
-  margin: 0px 30px;
-}
-
-footer > ul > li > a {
-  text-decoration: none;
-  color: white;
-  padding: 0px;
-  margin: 0px;
-}
-
-footer > ul > li:nth-of-type(1) > a > img {
-  height: 35px;
-  width: 35px;
-}
-footer > ul > li:nth-of-type(2) > a > img {
-  height: 30px;
-  width: 30px;
-}
-footer > ul > li:nth-of-type(3) > a > img {
-  height: 45px;
-  width: 45px;
+  ul {
+    list-style: none;
+    padding-left: 0px;
+    
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    li {
+        display: inline-block;
+        margin: 0px 30px;
+        a {
+            text-decoration: none;
+            color: $white;
+            padding: 0px;
+            margin: 0px;
+          }
+      }
+      li:nth-of-type(1) > a > img {
+        height: 35px;
+        width: 35px;
+      }
+      li:nth-of-type(2) > a > img {
+        height: 30px;
+        width: 30px;
+      }
+      li:nth-of-type(3) > a > img {
+        height: 45px;
+        width: 45px;
+      }
+  }
 }
