--- a/imports/client/styles/_main.scss
+++ b/imports/client/styles/_main.scss
@@ -1,3 +1,4 @@
+@import 'components/reset';
 @import 'components/classes';
 @import 'components/variables';
 
@@ -8,6 +9,12 @@ body {
 
   background: linear-gradient(#FFFFFF, #E1E1E1)
 }
+
+h2 {
+    font-size: 25px;
+    font-weight: 400;
+    line-height: 1.4em;
+  }
 
 header, footer { /* Sets header and footer to be 50px tall locked at top and bottom with centered content */
   position: fixed;
@@ -26,10 +33,6 @@ header, footer { /* Sets header and footer to be 50px tall locked at top and bot
 header {
   top: 0;
   color: $white;
-  h2 {
-    font-size: 25px;
-    font-weight: 400;
-  }
 }
 
 #react-target {
@@ -39,23 +42,24 @@ header {
 
 h1 {
   font-size: 48px;
-
-  padding: 0px;
-  margin-top: 10px;
+  font-weight: 500;
 }
 
+
 #homeTimer {
-    p:nth-of-type(1) {
-        margin: 50px 0px 0px;
-        padding: 0px;
-        line-height: 0px;
-    }
-    h2:nth-of-type(1) {
+    h2:nth-of-type(1) { //Welcome back
         font-size: 25px;
         font-weight: 500;
-        span {
+        span { //Name
             font-size: 36px;
           }
+    }
+    h2:nth-of-type(2) { //Current Time
+        margin-top: 20px;
+    }
+    h1 {
+        padding: 0px;
+        margin: 40px 0px 60px;
     }
 }
 
