--- a/imports/client/styles/_main.scss
+++ b/imports/client/styles/_main.scss
@@ -4,10 +4,21 @@
 
 body {
   font-family: sans-serif;
+}
 
-  min-height: 100vh;
+#BGImage {
+  height: 100vh;
+  width: 100vw;
+
+  margin-bottom: -100vh;
+
+  z-index: 1;
 
   background: linear-gradient(#FFFFFF, #E1E1E1)
+}
+
+#react-target {
+  z-index: 2;
 }
 
 h2 {
@@ -86,7 +97,6 @@ button {
 .time_item {
   .timeDetails{
     background-color: lightgrey;
-    border-top: solid 2px black;
     border-bottom: solid 2px black;
     p {
       text-align: right;
@@ -103,6 +113,7 @@ button {
   text-align: left;
   padding-left: 10px;
   margin-top: 20px;
+  border-bottom: solid 2px black;
 }
 
 footer {
