--- a/imports/client/styles/_main.scss
+++ b/imports/client/styles/_main.scss
@@ -14,7 +14,7 @@ body {
 
   z-index: 1;
 
-  background: linear-gradient(#FFFFFF, #D1D1D1)
+  background: linear-gradient( $white, #D1D1D1)
 }
 
 #react-target {
