--- a/imports/client/styles/_main.scss
+++ b/imports/client/styles/_main.scss
@@ -12,7 +12,9 @@ body {
 
   margin-bottom: -100vh;
 
-  z-index: 1;
+  z-index: -69;
+
+  position: fixed;
 
   background: linear-gradient( $white, #D1D1D1)
 }
