--- a/imports/client/styles/_main.scss
+++ b/imports/client/styles/_main.scss
@@ -6,6 +6,11 @@ body {
   font-family: sans-serif;
 }
 
+a {
+  color: black;
+  text-decoration: none;
+}
+
 #BGImage {
   height: 100vh;
   width: 100vw;
