--- a/imports/client/styles/_main.scss
+++ b/imports/client/styles/_main.scss
@@ -11,6 +11,20 @@ a {
   text-decoration: none;
 }
 
+p, select {
+  font-size: 18px;
+}
+
+select, input {
+  width: 210px;
+  padding: 10px;
+
+  border-radius: 10px;
+  color: white;
+
+  border: none;
+}
+
 #BGImage {
   height: 100vh;
   width: 100vw;
@@ -75,7 +89,7 @@ h1 {
     }
     h1 {
         padding: 0px;
-        margin: 40px 0px 60px;
+        margin: 40px 0px;
     }
 }
 
@@ -120,7 +134,22 @@ button {
   text-align: left;
   padding-left: 10px;
   margin-top: 20px;
+  padding-bottom: 5px;
   border-bottom: solid 2px black;
+}
+
+
+#editTimeContainer{
+  p:nth-of-type(1) {
+    margin-bottom: 35px;
+  }
+  input[type=datetime-local] {
+    font-size: 18px;
+    width: 200;
+  }
+  button {
+    font-size: 36px;
+  }
 }
 
 footer {
