--- a/imports/client/styles/_main.scss
+++ b/imports/client/styles/_main.scss
@@ -93,7 +93,7 @@ h1 {
     }
 }
 
-button {
+button, #manuallyInsertBtn {
   display: block;
   padding: 20px 0px;
   margin: 10px auto;
@@ -140,12 +140,19 @@ button {
 
 
 #editTimeContainer{
-  p:nth-of-type(1) {
-    margin-bottom: 35px;
+  hr {
+    width: 50%;
+    margin: 10px auto 15px;
+    border-top: 2px solid;
   }
-  input[type=datetime-local] {
+  p:not(:nth-of-type(1)) {
+    padding-bottom: 5px;
+  }
+  input[type=datetime-local], select {
+    display: block;
+    margin: 0px auto 20px;
     font-size: 18px;
-    width: 200;
+    width: 210px;
   }
   button {
     font-size: 36px;
